routes and html updated

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -91,7 +91,7 @@ strong {
 nav {
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 3;
 }
 
 .titles {
@@ -125,4 +125,12 @@ nav {
 
 .linkCol {
     color: black;
+}
+
+.forumMore {
+    margin-top: 15px;
+}
+
+.vits {
+    margin-top: 50px;
 }
