--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -164,3 +164,9 @@ nav {
 #links {
     position: relative;
 }
+
+.fullpost {
+    background-color: #f5f5f5;
+    padding: 15px;
+    border-radius: 25px;
+}
