--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -170,3 +170,10 @@ nav {
     padding: 15px;
     border-radius: 25px;
 }
+
+.commentdiv {
+    margin-top: 15px;
+    background-color: #f5f5f5;
+    padding: 15px;
+    border-radius: 25px;
+}
